[gd_scene load_steps=2 format=3 uid="uid://b3is7p4tbe3rw"]

[ext_resource type="Script" path="res://Menus/MainMenu/Setttings/settings_card.gd" id="1_0tx8k"]

[node name="SettingsCard" type="Control"]
layout_mode = 3
anchor_right = 0.667
anchor_bottom = 0.667
offset_right = -0.640137
offset_bottom = -0.360046
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0tx8k")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 84.0
offset_right = 636.0
offset_bottom = 716.0
follow_focus = true

[node name="ItemContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 84.0

[node name="InfoBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 652.0
offset_top = 4.0
offset_right = 1276.0
offset_bottom = 716.0

[node name="Header" type="Label" parent="InfoBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "Header"
horizontal_alignment = 1

[node name="Description" type="Label" parent="InfoBox"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Informational Text"
horizontal_alignment = 1
vertical_alignment = 1
